--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
@@ -99,7 +99,9 @@
         </div>
       </div>
       <div class="chatbetimage" style="display: flex">
-        <img src="../../../../assets/prueba.png" alt="">
+  
+       <img [src]="currentImages['whatischatbet']" alt="" />
+
       </div>
     </div>
   </div>
