--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -21,9 +21,13 @@ p{
 }
 
 .image-provensection{
-    width: 30%;
+    width: 40%;
+    height: 30%;
+    bottom: 0;
+    /* margin-left: 15px; */
     @media screen and (max-width: 900px){
         width: 100%;
+/*         margin-left: 0; */
     }
  }
 .tag{
@@ -429,6 +433,7 @@ h3{
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 40%;
         img{
             width: 100%;
             height: 100%;
