--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
@@ -50,9 +50,9 @@
     <div class="first-section-container">
       <div class="text">
         <br>
-        <h1>{{ 'aboutUs.title' | translate }}</h1>
+        <h1 class="titlebold5">{{ 'aboutUs.title' | translate }}</h1>
         <br>
-        <span class="TitleBold3">{{ 'aboutUs.subtitle' | translate }}</span>
+        <h3 class="TitleBold7">{{ 'aboutUs.subtitle' | translate }}</h3>
 
         <p>
           {{ 'aboutUs.description1.part1' | translate }}
