--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -98,7 +98,8 @@
 <div class="backgroundline">
   <div class="iconline">
     <img src="../../../../assets/Background/end-sect-one.png" alt="" />
-    <img class="line" src="../../../../assets/inversionistas.png" alt="" />
+    <img class="line" [src]="currentImages['inversionitas']" alt=""  />
+
   </div>
 </div>
 
