--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -434,6 +434,8 @@ h3{
         justify-content: center;
         align-items: center;
         width: 40%;
+    @media screen and (max-width: 900px) { width: 100%; }
+
         img{
             width: 100%;
             height: 100%;
