--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -172,10 +172,10 @@
     <div class="second-flex">
       <span class="TitleTag" id="feature">{{ 'features.descriptionHeader' | translate }}</span>
       <h1>{{ 'features.title' | translate }}</h1>
-      <div class="text">
-        <div class="texto">
+      <div class="newtex">
+       
           <p>{{ 'features.description' | translate }}</p>
-        </div>
+  
       </div>
     </div>
   </div>
