--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -8,7 +8,11 @@ h1,h2,h3,h4,h5,h6{
     color:#5554F3;
 }
 
-
+.nextext{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
 .TitleBold3{
     font-family: "Poppins-Bold", sans-serif;
     span{
