--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
@@ -1016,8 +1016,10 @@ h1, h2, h3, h4, h5, h6 {
               li {
                 font-family: "Poppins", sans-serif;
                 color: black;
-                font-size: 1.1rem;
+                font-size: 0.9rem;
                 text-align: justify;
+                margin-top: 5px;
+                margin-left: 0.7rem;
               }
             }
   
