--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -8,11 +8,7 @@ h1,h2,h3,h4,h5,h6{
     color:#5554F3;
 }
 
-.nextext{
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
+
 .TitleBold3{
     font-family: "Poppins-Bold", sans-serif;
     span{
@@ -654,6 +650,7 @@ h3{
             align-items: center;
             justify-content: center;
             text-align: center;
+            font-family: 'Poppins', sans-serif;
         }
         @media (max-width: 900px) {
             display: block;
@@ -1084,56 +1081,7 @@ h3{
     }
     
 
-  /*   .image-carousel {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-row: 1fr 1fr;
-        grid-gap: 10px;
-        justify-content: space-between;
-        overflow: hidden;
-        width: 100%;
-    
-        @media (max-width: 900px) {
-            display: flex;
-            overflow-x: auto; 
-            flex-wrap: nowrap; 
-            scroll-snap-type: x mandatory; 
-            -webkit-overflow-scrolling: touch; 
-            scrollbar-width: none; 
-            &::-webkit-scrollbar {
-                display: none; 
-            }
-        }
-        .carousel-item {
-            flex: 1;
-            text-align: center;
-            padding: 10px;
-            margin: 0 5px;
-            scroll-snap-align: start; 
-    
-            @media (max-width: 900px) {
-                flex: 0 0 auto; 
-                width: 80%; 
-                min-width: 250px; 
-            }
-    
-            img {
-                width: 80px;
-                height: auto;
-                object-fit: cover;
-                margin-top: 24px;
-            }
-    
-            p {
-                color: black;
-                font-family: 'Poppins', sans-serif;
-                font-size: 1rem;
-                margin-top: 10px;
-                text-align: center;
-            }
-        }
-    }
- */
+
 
  #comofunciona {
     .image-carousel {
@@ -1201,6 +1149,7 @@ h3{
           justify-content: center;
           margin: 0;
           padding: 0 10px;
+          text-align: center;
         }
   
         @media (max-width: 900px) {
@@ -1303,7 +1252,7 @@ h3{
     }
     input{
         width: 90%;
-        padding: 3rem;
+        padding: 3rem 0;
         border:none;
         border-bottom: solid 1px;
         border-color: #E4EBEE;
