--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -1252,7 +1252,7 @@ h3{
     }
     input{
         width: 90%;
-        padding: 3rem 0;
+        padding: 3rem 1rem;
         border:none;
         border-bottom: solid 1px;
         border-color: #E4EBEE;
