--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -3,7 +3,7 @@
     <!-- <img src="./assets/Background/nuevoheader.png" alt="" /> -->
   </div>
   
-  <header>
+  <header  [class.scrolled]="isScrolled">
     <div class="section-header">
       <div class="mobileheader">
         <img class="chatbetone" src="./assets/Icon/Layer_1.png" alt="{{ 'header.logoAlt' | translate }}" />
