--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -292,7 +292,8 @@ h3{
         display: none;
         position: fixed;
         top: 0;
-        left: 0;
+        left: -7%;
+        padding-left: -7%;
         width: 100%;
         height: 100vh;
         background: rgba(0, 0, 0, 0.5);
