--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -315,7 +315,7 @@ h3{
             background: white;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            /* justify-content: center; */
             box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
             transition: right 0.3s ease;
             z-index: 999;
