--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -326,6 +326,7 @@ h3{
         
             a {
               padding: 1rem 0;
+              margin-top: 0.5rem;
               width: 100%;
               text-align: center;
             }
