--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
@@ -156,6 +156,25 @@ h1, h2, h3, h4, h5, h6 {
     padding-right: 7%;
     margin-bottom: 100px;
   }
+  header {
+    position: static;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    
+    &.scrolled {
+      position: fixed;
+      transform: translateY(0);
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  
+      // Ajustamos el margen cuando el header es fixed
+      .section-header:first-child {
+        margin-right: 7%; // Cambia de -7% a 7%
+        margin-left: -7%; // Mantenemos el izquierdo si es necesario
+      }
+    }
+  }
   
   .section {
     position: relative;
@@ -600,7 +619,7 @@ h1, h2, h3, h4, h5, h6 {
     .text {
       font-family: 'Poppins', sans-serif;
       color: black;
-      width: 45%;
+      width: 60%;
       margin-left: 1.5rem;
       @media screen and (max-width: 900px) { width: 100%; margin-left: 0; }    
     }
