--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -38,7 +38,22 @@
         <span class="divisor">|</span>
         <div class="idioma">
           <a href="" (click)="switchLanguage('en')"> {{ 'header.languageSwitch.english' | translate }} </a>
+          <img 
+    (click)="switchLanguage('en')"
+    [src]="currentLanguage === 'en' 
+      ? '../../../../assets/header/en-on.png' 
+      : '../../../../assets/header/en-off.png'" 
+    alt="English"
+  >
+          
           <a href="" (click)="switchLanguage('es')"> {{ 'header.languageSwitch.spanish' | translate }} </a>
+          <img 
+          (click)="switchLanguage('es')"
+          [src]="currentLanguage === 'es' 
+            ? '../../../../assets/header/es-on.png' 
+            : '../../../../assets/header/es-off.png'" 
+          alt="Español"
+        >
         </div>
       </div>
     </div>
