--- a/src/app/Chat-Bet/pages/spotlight/spotlight.component.scss
+++ b/src/app/Chat-Bet/pages/spotlight/spotlight.component.scss
@@ -1237,7 +1237,8 @@ h1,h2,h3,h4,h5,h6{
 
     li{
         position: relative; 
-        padding-left: 30px; 
+        padding-left: 35px; 
+        margin-right: 15px;
         margin-bottom: 10px; 
     }
     li::before {
@@ -1266,7 +1267,10 @@ h1,h2,h3,h4,h5,h6{
         width: 75%;
 
        ul{
+        @media (max-width: 900px) {
             flex-direction: column;
+            
+        }
         }
     }    
 }
