--- a/src/app/Chat-Bet/pages/spotlight/spotlight.component.scss
+++ b/src/app/Chat-Bet/pages/spotlight/spotlight.component.scss
@@ -1218,8 +1218,8 @@ h1,h2,h3,h4,h5,h6{
         }
 
         img{
-        width: 25%;
-        height: 25%;
+        width: 20%;
+        height: auto;
         border-radius: 25px;
 
         @media (max-width: 900px){
@@ -1265,6 +1265,7 @@ h1,h2,h3,h4,h5,h6{
     .infonotice{
        margin-left: 2rem;
         width: 75%;
+        
 
        ul{
         @media (max-width: 900px) {
