--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
@@ -267,7 +267,7 @@
     </mat-expansion-panel>
 
     <!-- Panel 5 -->
-    <mat-expansion-panel>
+ <!--    <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title>
           <img src="../../../../assets/Icon/icon-mat.png" class="iconimage" alt="Icon">
@@ -288,10 +288,10 @@
           </div>
         </div>
       </div>
-    </mat-expansion-panel>
+    </mat-expansion-panel> -->
 
     <!-- Panel 6 -->
-    <mat-expansion-panel>
+   <!--  <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title>
           <img src="../../../../assets/Icon/icon-mat.png" class="iconimage" alt="Icon">
@@ -306,7 +306,7 @@
           </div>
         </div>
       </div>
-    </mat-expansion-panel>
+    </mat-expansion-panel> -->
   </mat-accordion>
 </div>
 
