--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -605,7 +605,7 @@
   <div class="third-section" id="integration">
     <div class="third-flex">
       <div class="image-section" style="display: flex">
-        <img src="../../../../assets/integration.png" alt="" />
+        <img src="../../../../assets/HomePage/integration.png" alt="" />
       </div>
       <div class="text">
         <span class="TitleTag" >{{ 'integration.titleheader' | translate }}</span>
