--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -3,7 +3,7 @@
     <!-- <img src="./assets/Background/nuevoheader.png" alt="" /> -->
   </div>
   
-  <header  [class.scrolled]="isScrolled">
+  <!-- <header  [class.scrolled]="isScrolled">
     <div class="section-header">
       <div class="mobileheader">
         <img class="chatbetone" src="./assets/Icon/Layer_1.png" alt="{{ 'header.logoAlt' | translate }}" />
@@ -58,8 +58,9 @@
       </div>
     </div>
   </header>
-
-  <div class="first-section">
+ -->
+  
+ <div class="first-section">
     <div class="gif2">
       <img [src]="currentImages['phone']" alt="" style="margin-top: 0" />
     </div>
