--- a/src/app/Chat-Bet/pages/spotlight/spotlight.component.html
+++ b/src/app/Chat-Bet/pages/spotlight/spotlight.component.html
@@ -3,7 +3,7 @@
     <!-- <img src="./assets/Background/nuevoheader.png" alt="" /> -->
   </div>
 
-  <header [class.scrolled]="isScrolled">
+<!--   <header [class.scrolled]="isScrolled">
     <div class="section-header">
       <div class="mobileheader">
         <img class="chatbetone" src="./assets/Icon/Layer_1.png" routerLink="/" />
@@ -21,8 +21,7 @@
         </button>
         
       </div>
-<!-- 
-      <img class="chatbetone" src="./assets/Icon/Layer_1.png" alt="" routerLink="/"/> -->
+
       <div class="menu-overlay" [class.active]="isMenuOpen" (click)="toggleMenu()"></div>
       <div class="navbar" [class.active]="isMenuOpen">
         <a href="#feature">{{ 'header.navigation.features' | translate }}</a>
@@ -59,7 +58,7 @@
       </div>
     </div>
   </header>
-
+ -->
   <div class="first-section">
     <div class="first-section-container">
       <div class="text">
