--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
@@ -41,12 +41,12 @@
         <div>
           <p>
             {{ 'aboutUs.changingGame.paragraph1.part1' | translate }}
-            <span class="TitleBold3">{{ 'aboutUs.changingGame.paragraph1.highlight1' | translate }}</span>
+           <!--  <span class="TitleBold3">{{ 'aboutUs.changingGame.paragraph1.highlight1' | translate }}</span> -->
             {{ 'aboutUs.changingGame.paragraph1.part2' | translate }}
           </p><br>
           <p>
             {{ 'aboutUs.changingGame.paragraph2.part1' | translate }}
-            <span class="TitleBold3">{{ 'aboutUs.changingGame.paragraph2.highlight1' | translate }}</span>
+            <!-- <span class="TitleBold3">{{ 'aboutUs.changingGame.paragraph2.highlight1' | translate }}</span> -->
             {{ 'aboutUs.changingGame.paragraph2.part2' | translate }}
           </p>
         </div>
