--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
@@ -9,16 +9,16 @@
 
         <p>
           {{ 'aboutUs.description1.part1' | translate }}
-          <span class="TitleBold3">{{ 'aboutUs.description1.highlight1' | translate }}</span>
+          {{ 'aboutUs.description1.highlight1' | translate }}
           {{ 'aboutUs.description1.part2' | translate }}
-          <span class="TitleBold3">{{ 'aboutUs.description1.highlight2' | translate }}</span>
+        {{ 'aboutUs.description1.highlight2' | translate }}
         </p>
         <p>
-          <span class="TitleBold3">{{ 'aboutUs.description2.highlight1' | translate }}</span>
+          {{ 'aboutUs.description2.highlight1' | translate }}
           {{ 'aboutUs.description2.part1' | translate }}
-          <span class="TitleBold3">{{ 'aboutUs.description2.highlight2' | translate }}</span>
+          {{ 'aboutUs.description2.highlight2' | translate }}
           {{ 'aboutUs.description2.part2' | translate }}
-          <span class="TitleBold3">{{ 'aboutUs.description2.highlight3' | translate }}</span>
+          {{ 'aboutUs.description2.highlight3' | translate }}
         </p>
         
         <br>
