--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -1,4 +1,5 @@
 <div class="section">
+
   <div class="background">
     <!-- <img src="./assets/Background/nuevoheader.png" alt="" /> -->
   </div>
@@ -695,13 +696,10 @@
   </div>
 </div>
 
-<!-- <div class="backgroundline">
-  <div class="fotter1">
-    <img [src]="currentImages['footer']" alt="" />
-  </div>
-
-  <div class="fotter2">
-    <img [src]="currentImages['footer2'] " alt="" />
-  </div>
-</div>
+<!-- <iframe 
+src="https://calendly.com/odbad-ace" 
+width="100%" 
+height="100%"
+frameborder="0"
+></iframe> 
  -->
