--- a/src/app/Chat-Bet/pages/spotlight/spotlight.component.scss
+++ b/src/app/Chat-Bet/pages/spotlight/spotlight.component.scss
@@ -1217,14 +1217,26 @@ h1,h2,h3,h4,h5,h6{
             width: 100%;     
         }
 
+        .imagen{
+            display: flex;
+            align-items: center;
+            width: 20%;
+            justify-content: space-around;
+            @media (max-width: 900px){
+    
+                width: 100%; 
+                align-items: center;
+            }
+        }
         img{
-        width: 20%;
+        width: 100%;
         height: auto;
         border-radius: 25px;
 
         @media (max-width: 900px){
             display: block;
-            width: 100%;     
+            width: 70%;     
+            align-items: center;
         }
     }
     ul{
@@ -1265,12 +1277,20 @@ h1,h2,h3,h4,h5,h6{
     .infonotice{
        margin-left: 2rem;
         width: 75%;
-        
+        @media (max-width: 900px) {
+            margin-left: 2.5rem;
+            width: 90%;
+
+            h2{
+            text-align: center;
+        }
+      
+        }
 
        ul{
         @media (max-width: 900px) {
             flex-direction: column;
-            
+      
         }
         }
     }    
