--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -850,7 +850,7 @@ h3{
             margin: 40px 0;
         }
         
-        .image-section {
+  /*       .image-section {
             order: 2; 
             width: 100%;
         }
@@ -858,15 +858,15 @@ h3{
         .image-provensection{
             order: 2;
             width: 100%;
-        }
+        } */
         .merch{
             order: 2; 
             width: 100%;
         }
-         .chatbetimage{
+/*          .chatbetimage{
                 order: 2; 
                 width: 100%;
-            }
+            } */
     }
         
         .text{
