--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -21,7 +21,7 @@
       <!-- Parte 3 (Contacto) -->
       <div class="parte3">
         <p class="titulo-contacto">{{ 'footer.info' | translate }}</p>
-        <p class="email" href="mailto:info@chatbet.com">info&#64;chatbet.com</p>
+        <p class="email" href="mailto:marketing@chatbet.gg">marketing&#64;chatbet.gg</p>
       </div>
     </div>
   </div>
@@ -38,7 +38,7 @@
         <a href="#"><img src="../../../assets/footer/x.png" alt="Twitter" /></a>
       </div>
       <p class="titulo-contacto-mobile">{{ 'footer.info' | translate }}</p>
-      <p class="email-mobile" href="mailto:info@chatbet.com">info&#64;chatbet.com</p>
+      <p class="email-mobile" href="mailto:marketing@chatbet.gg">marketing&#64;chatbet.gg</p>
     </div>
   </div>
 </div>
