--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -661,6 +661,20 @@
       <h3>
         <span class="TitleBoldMobile">{{ 'contactUs.subtitle' | translate }}</span>
       </h3>
+   
+      <br>
+      <h3>{{ 'calender.pick' | translate }} </h3>
+      <iframe 
+      src="https://calendly.com/chatbet-marketing/30min" 
+      width="100%" 
+      height="700px"
+      frameborder="0"
+      ></iframe> 
+
+      <h3>
+        <span class="TitleBoldMobile">{{ 'calender.notReady' | translate }}</span>
+      </h3>
+      <br>
     </div>
 
     <div class="form" [formGroup]="form">
@@ -696,10 +710,4 @@
   </div>
 </div>
 
-<!-- <iframe 
-src="https://calendly.com/odbad-ace" 
-width="100%" 
-height="100%"
-frameborder="0"
-></iframe> 
- -->
+
