--- a/src/app/Chat-Bet/pages/spotlight/spotlight.component.scss
+++ b/src/app/Chat-Bet/pages/spotlight/spotlight.component.scss
@@ -111,6 +111,7 @@ h1,h2,h3,h4,h5,h6{
     @media (max-width: 900px){
         align-items: center;
         font-weight: 900;
+        font-size: 2.5rem;
         width: 100%;
         font-family: "Poppins", sans-serif;
 
