--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -780,15 +780,21 @@ h3{
         }
       
         @media (max-width: 600px) {
-          font-size: 0.7rem;
-          padding: 0.5rem;
+          font-size: 0.5rem;
+          padding: 0.2rem;
           border-radius: 20px;
         }
       
         td {
           padding: 0.7rem;
           @media (max-width: 600px) {
-            padding: 0.3rem;
+            padding: 0rem;
+
+            img{
+                width: 20%;
+                height: auto;
+                object-fit: cover;
+            }
           }
         }
       
@@ -820,7 +826,6 @@ h3{
 
           @media (max-width: 600px) {
             font-size: 0.5rem;
-            text-align: center;
           }
         }
       }
