--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -801,13 +801,14 @@ h3{
         th {
           padding: 0 1.5rem;
           font-size: clamp(0.8rem, 1.5vw, 1.2rem);
-          @media (max-width: 900px) {
-            padding: 0 0.4rem;
-            font-size: 0.6rem;
+          @media (min-width: 601px) and (max-width: 900px) {
+            padding: 0 1rem;
+            font-size: 0.8rem;
           }
+
           @media (max-width: 600px) {
-            padding: 0 0.5rem;
-            font-size: 0.7rem;
+            padding: 0 0.4rem;
+            font-size: 0.5rem;
           }
         }
       
