--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -828,7 +828,7 @@ h3{
           @media (max-width: 600px) {
             font-size: 0.6rem;
             padding: 0 0 0 1.2rem;
-            text-align: center;
+            /* text-align: center; */
           }
         }
       }
