--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -51,13 +51,44 @@ align-items: center;
 
 
 .backgroundline{
+    
+    .backgroundcarousel {
+        position: relative; 
+        min-height: 100vh; 
+        display: flex; 
+        align-items: center; 
+        .desktop-back{
+        @media (max-width: 900px) {
+            display: none;        
+        }
+        }
 
+        .mobile-back{
+            @media (min-width: 900px) {
+                display: none;        
+            }
+        }
+        img {
+            position: absolute;
+            width: 100%; 
+            height: auto;
+            object-fit: cover;
+            z-index: 0;
+            @media (max-width:900px) {
+                height: 100vh;  
+                object-fit: contain;  
+            }
+        }
+    
+        app-carousel-slider {
+            position: relative;
+            z-index: 1;
+            width: 100%; 
+        }
+    }
     img{
         width: 100%;
         height: 100%;
-        object-fit: cover;
-        display: block;
-
     }
 
     .fotter1{
@@ -93,6 +124,7 @@ align-items: center;
         @media (max-width:900px){
             height: 80px;            
         }
+        
     }   
     .line {
         position: absolute;
@@ -483,7 +515,6 @@ h3{
         @media (max-width: 900px) {
           display: flex;
           overflow-x: auto;
-          overscroll-behavior-x: contain;
           scroll-snap-type: x mandatory;
           margin: 0; /* Quita margen en móvil */
           padding: 0 30px; /* Añade padding para no tapar contenido */
@@ -1188,10 +1219,6 @@ h3{
             box-sizing: border-box;
             @media (max-width:900px) {
                 margin-top: -20px;
-                overflow-x: auto; /* Permite scroll horizontal */
-                -webkit-overflow-scrolling: touch; /* Scroll suave en iOS */
-                scrollbar-width: thin; /* Firefox */
-                scrollbar-color: #888 transparent;
             }
       
             & > div {
