--- a/src/app/components/carousel-slider/carousel-slider.component.scss
+++ b/src/app/components/carousel-slider/carousel-slider.component.scss
@@ -118,6 +118,7 @@
   @media (max-width: 900px) {
     margin-top: 15rem;
     justify-content: start;
+    margin-left: -7rem;
     
   }
   .keen-slider__slide {
