--- a/src/app/components/carousel-slider/carousel-slider.component.scss
+++ b/src/app/components/carousel-slider/carousel-slider.component.scss
@@ -124,7 +124,10 @@
   .keen-slider__slide {
     align-items: center;
     display: flex;
-
+    @media (max-width: 900px) {
+      justify-content: start;
+      align-items: start;
+    }  
   }
 }
 
