--- a/src/app/components/carousel-slider/carousel-slider.component.scss
+++ b/src/app/components/carousel-slider/carousel-slider.component.scss
@@ -72,13 +72,12 @@
     }
 
     img {
-      cursor: pointer;
       height: 100%;
       object-fit: cover;
       width: 100%;
       @media (max-width: 900px) {
-
-        width: 100%;
+        width: 60%;
+        object-fit: contain;
 
       }
     }
