--- a/src/app/components/carousel-slider/carousel-slider.component.scss
+++ b/src/app/components/carousel-slider/carousel-slider.component.scss
@@ -76,8 +76,8 @@
       object-fit: cover;
       width: 100%;
       @media (max-width: 900px) {
-        width: 60%;
-        object-fit: contain;
+        width: 70%;
+       /*  object-fit: contain; */
 
       }
     }
@@ -116,8 +116,8 @@
 
   @media (max-width: 900px) {
     margin-top: 15rem;
-    justify-content: start;
-    margin-left: -2rem;
+/*     justify-content: start;
+    margin-left: -2rem; */
     
   }
   .keen-slider__slide {
