--- a/src/app/components/carousel-slider/carousel-slider.component.scss
+++ b/src/app/components/carousel-slider/carousel-slider.component.scss
@@ -116,6 +116,7 @@
 
   @media (max-width: 900px) {
     margin-top: 15rem;
+    justify-content: center;
 /*     justify-content: start;
     margin-left: -2rem; */
     
