--- a/src/app/components/carousel-slider/carousel-slider.component.scss
+++ b/src/app/components/carousel-slider/carousel-slider.component.scss
@@ -116,9 +116,8 @@
 
   @media (max-width: 900px) {
     margin-top: 15rem;
-    justify-content: center;
-/*     justify-content: start;
-    margin-left: -2rem; */
+    justify-content: start;
+    margin-left: -2rem;
     
   }
   .keen-slider__slide {
