--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -666,7 +666,7 @@
       </h3>
    
       <br>
-      <h3>{{ 'calender.pick' | translate }} </h3>
+      <h3 class="iframetitle">{{ 'calender.pick' | translate }} </h3>
       <iframe 
       src="https://calendly.com/chatbet-marketing/30min" 
       width="100%" 
